# OS.Assignment1

./: .directory  .nfs000000000c738d7200000017  311303572_312275845.patch  CMakeLists.txt  Makefile  README.md  _helloW  _quitXV6  defs.h  policy.c  proc.c  proc.h  sanity.c  schedulinginterface.h  sh.c  syscall.c  syscall.h  sysproc.c  trap.c  types.h  user.h  usys.S
