cmake_minimum_required(VERSION 3.10)
project(Assignment1)

set(CMAKE_CXX_STANDARD 11)

include_directories(.)

add_executable(Assignment1
        cmake-build-debug/Assignment1.cbp
        cmake-build-debug/cmake_install.cmake
        cmake-build-debug/CMakeCache.txt
        cmake-build-debug/Makefile
        asm.h
        ass1ds.cpp
        ass1ds.hpp
        bio.c
        bootasm.S
        bootmain.c
        buf.h
        BUGS
        cat.c
        console.c
        cuth
        date.h
        defs.h
        dot-bochsrc
        echo.c
        elf.h
        entry.S
        entryother.S
        exec.c
        fcntl.h
        file.c
        file.h
        forktest.c
        fs.c
        fs.h
        gdbutil
        grep.c
        ide.c
        init.c
        initcode.S
        ioapic.c
        kalloc.c
        kbd.c
        kbd.h
        kernel.ld
        kill.c
        lapic.c
        LICENSE
        ln.c
        log.c
        ls.c
        main.c
        Makefile
        memide.c
        memlayout.h
        mkdir.c
        mkfs.c
        mmu.h
        mp.c
        mp.h
        Notes
        param.h
        picirq.c
        pipe.c
        policy.c
        pr.pl
        printf.c
        printpcs
        proc.c
        proc.h
        README
        rm.c
        runoff
        runoff.list
        runoff.spec
        runoff1
        sanity.c
        schedulinginterface.h
        sh.c
        show1
        sign.pl
        sleep1.p
        sleeplock.c
        sleeplock.h
        spinlock.c
        spinlock.h
        spinp
        stat.h
        stressfs.c
        string.c
        swtch.S
        syscall.c
        syscall.h
        sysfile.c
        sysproc.c
        toc.ftr
        toc.hdr
        trap.c
        trapasm.S
        traps.h
        TRICKS
        types.h
        uart.c
        ulib.c
        umalloc.c
        user.h
        usys.S
        vectors.pl
        vm.c
        wc.c
        x86.h
        zombie.c)
